--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Farida Nurhasanah</span>
+                <span id="name">Farida</span>
             </h1>
             <p class="two" id="greetingText">I Really Like Your Name Btw!</p>
         </div>
@@ -55,7 +55,7 @@
             </p>
             <p class="idea-4">Jadi, Kita Rayakan Online Dulu Yaaa...</p>
             <p class="idea-5">
-                Ayo Hitung Sama-Sama..
+                Ayo Hitung Sama Sama..
                 <span>:D</span>
             </p>
             <p class="idea-6">
@@ -144,7 +144,7 @@
 
         <div class="nine">
             <p>Dah selesai aja huhuuhuu :(.</p>
-            <p id="replay">Nanti putar lagi ya, biar di rayakan berkali kali XD .</p>
+            <p id="replay">Nanti putar lagi ya, biar di rayakan berkali kali</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
