--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 <strong>Special</strong>
                 .
             </p>
-            <p class="idea-4">Jadi, Kita Rayakan Online Dulu Yaaa...</p>
+            <p class="idea-4">Jadi, Kita Rayakan Disini Aja Dulu Yaaa...</p>
             <p class="idea-5">
-                Ayo Hitung Sama Sama..
+                Ayo Hitung Bersama..
                 <span>:D</span>
             </p>
             <p class="idea-6">
@@ -69,7 +69,7 @@
             <img src="./img/Ida1.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Barakallah_Fii_Umrik!</h3>
+                <h3 class="wish-hbd">HappyBirthday!</h3>
                 <h5 id="wishText">Farida Nurhasanah</h5>
             </div>
         </div>
